--- a/PlataformGame/Assembly-CSharp.csproj
+++ b/PlataformGame/Assembly-CSharp.csproj
@@ -48,6 +48,7 @@
      <Compile Include="Assets/Scripts/Paralax.cs" />
      <Compile Include="Assets/Scripts/PlayerControl.cs" />
      <Compile Include="Assets/Scripts/EnemyControl.cs" />
+     <Compile Include="Assets/Scripts/CameraController.cs" />
     <Reference Include="UnityEngine">
         <HintPath>/home/eu/Unity/Hub/Editor/2022.3.8f1/Editor/Data/Managed/UnityEngine/UnityEngine.dll</HintPath>
     </Reference>
