--- a/PlataformGame/Assembly-CSharp.csproj
+++ b/PlataformGame/Assembly-CSharp.csproj
@@ -40,12 +40,14 @@
     <Analyzer Include="/home/eu/Unity/Hub/Editor/2022.3.8f1/Editor/Data/Tools/Unity.SourceGenerators/Unity.Properties.SourceGenerator.dll" />
   </ItemGroup>
   <ItemGroup>
+     <Compile Include="Assets/Scripts/DeathControl.cs" />
      <Compile Include="Assets/Scripts/ExplosaoControl.cs" />
      <Compile Include="Assets/Scripts/BladeControl.cs" />
      <Compile Include="Assets/Scripts/ScoreManager.cs" />
      <Compile Include="Assets/Scripts/SpiceControl.cs" />
      <Compile Include="Assets/Scripts/Pontuacao.cs" />
      <Compile Include="Assets/Scripts/ShieldControl.cs" />
+     <Compile Include="Assets/Scripts/BladeControlNeg.cs" />
      <Compile Include="Assets/Scripts/GameManager.cs" />
      <Compile Include="Assets/Scripts/Paralax.cs" />
      <Compile Include="Assets/Scripts/PlayerControl.cs" />
